# eligibility-server

./: .devcontainer.json  .dockerignore  .env.sample  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pyup.yml  404.html  Dockerfile  Dockerfile.dev  README.md  app.py  compose.yml  docker-compose.yml  experiment-pipeline.yml  experiment-workspace.py  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml  teardown.py
.devcontainer/: .env.sample  Dockerfile  compose.yml  devcontainer.json  install_terraform.sh  postAttach.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  release.yml
.github/workflows/: add-to-project-dependabot.yml  add-to-project-dependencies.yml  check-metadata.py  check-metadata.yml  codeql.yml  docker-publish.yml  mkdocs.yml  pre-commit.yml  release.yml  run-tests.yml
config/: sample.py
configuration/: index.html
configuration/settings/: index.html
data/: server.csv  server.json
deployment/: .pages
deployment/infrastructure/: index.html
docs/: .page  .pages  README.md  getting-started.md  releases.md
docs/API/: README.md
docs/configuration/: .pages  README.md  settings.md
docs/deployment/: infrastructure.md
docs/specification/: .pages  example-transactions.md
eligibility_server/: __init__.py  app.py  configuration.py  database.py  hash.py  keypair.py  logging.py  sentry.py  settings.py  verify.py
eligibility_server/db/: __init__.py  database.py  models.py  setup.py  teardown.py
experiment/: .terraform.lock.hcl  experiment-pipeline.yml  main.tf  workspace.py
getting-started/: index.html
keys/: README.md
releases/: index.html
search/: search_index.json
terraform/: .gitignore  .terraform.lock.hcl  README.md  app_service.tf  azure-pipelines.yml  environment.tf  front_door.tf  infrastructure.md  init.sh  key_vault.tf  main.tf  monitor.tf  roles.tf  storage.tf  suppress.arm.json  temp  uptime.tf  variables.tf  workspace.py
terraform/mst/: azure-pipelines.yml  azure-restart.yml  azure-vars.yml  local.env  local.tfbackend  tfvars.yml
terraform/pipeline/: azure-pipelines.yml  deploy.yml  restart.yml  workspace.py
terraform/sbmtd/: azure-pipelines.yml  azure-restart.yml  azure-vars.yml  local.env  local.tfbackend
terraform/uptime/: README.md  main.tf  outputs.tf
tests/: .env.settingstest  .env.tests  conftest.py  pytest.ini  requirements.txt  test_app.py  test_database.py  test_hash.py  test_keypair.py  test_settings.py  test_setup.py  test_verify.py  tox.ini
tests/db/: test_setup.py
tests/hash/: conftest.py  test_no_hash.py
