[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
classifiers = ["Programming Language :: Python :: 3 :: Only"]
description = "Server implementation of the Eligibility Verification API"
dependencies = [
    "eligibility-api==2023.9.1",
    "Flask==2.3.3",
    "Flask-RESTful==0.3.10",
    "Flask-SQLAlchemy==3.1.1",
    "requests==2.31.0"
]
version = "2023.08.2"
keywords = ["flask"]
license = { file = "LICENSE" }
name = "eligibility-server"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pre-commit",
]
test = [
    "coverage",
    "pytest",
    "pytest-mock",
]

[project.urls]
Code = "https://github.com/cal-itp/eligibility-server"
Documentation = "https://docs.calitp.org/eligibility-server"
Issues = "https://github.com/cal-itp/eligibility-server/issues"

# Configuration for black
[tool.black]
line-length = 127
target-version = ['py310']
include = '\.pyi?$'

[tool.pyright]
include = ["eligibility_server", "tests"]

[tool.setuptools]
packages = ["eligibility_server"]
