[project]
name = "eligibility-server"
version = "2023.09.1"
description = "Server implementation of the Eligibility Verification API"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.9"
dependencies = [
    "eligibility-api==2023.9.1",
    "Flask==2.3.3",
    "Flask-RESTful==0.3.10",
    "Flask-SQLAlchemy==3.1.1",
    "requests==2.31.0",
    "sentry-sdk[flask]==1.36.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pre-commit",
]
test = [
    "coverage",
    "pytest",
    "pytest-mock",
]

[project.urls]
Code = "https://github.com/cal-itp/eligibility-server"
Documentation = "https://docs.calitp.org/eligibility-server"
Issues = "https://github.com/cal-itp/eligibility-server/issues"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.pyright]
include = ["eligibility_server", "tests"]

[tool.setuptools]
packages = ["eligibility_server"]
